2001-06-28  Akim Demaille  <akim@epita.fr>

	* configure.in: Bump to 2.50c.

2001-06-26  Akim Demaille  <akim@epita.fr>

	Version 2.50b.

2001-06-26  Akim Demaille  <akim@epita.fr>

	Version 2.50a.

2001-06-25  Pavel Roskin  <proski@gnu.org>

	* tests/atspecific.m4 (AT_CHECK_MACRO): Accept one more
	argument, AUTOCONF-FLAGS.
	* tests/mktests.sh (update_exclude_list): Add
	AC_SYS_RESTARTABLE_SYSCALLS and AC_FUNC_WAIT3.
	* tests/semantics.at: Test AC_SYS_RESTARTABLE_SYSCALLS and
	AC_FUNC_WAIT3 with "-W no-obsolete".

2001-06-25  Akim Demaille  <akim@epita.fr>

	* tests/foreign.at (libtool): Fix the `libtoolize --version' decoding.

2001-06-25  Akim Demaille  <akim@epita.fr>

	* autoscan.in (%macro): Now maps from word to list of macros.
	(&init_tables): Die when a word which is already handled by
	explicit macros is mapped to the default macro.
	(&print_unique): Remove, inlined in...
	(&output_kind): here.
	(File::Basename): Use it.
	(&output): Sort the CONFIG_FILES.
	* acheaders: Normalize.
	* acfunctions: Likewise.

2001-06-25  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_LANG_COMPILER_GNU): If GNU, dump the compiler
	characteristics in the logs.
	Suggested by Mo DeJong.

2001-06-24  Akim Demaille  <akim@epita.fr>

	* acfunctions.m4 (AM_FUNC_ERROR_AT_LINE, AM_FUNC_FNMATCH)
	(AM_FUNC_MKTIME, AM_FUNC_OBSTACK, AM_FUNC_STRTOD): Reactivated.
	* doc/autoconf.texi (Autoconf 2.13): New section.

2001-06-24  Akim Demaille  <akim@epita.fr>

	* autoconf.in (Task traces): Separate the error messages from the
	traces to improve robustness.


2001-06-23  Akim Demaille  <akim@epita.fr>

	* tests/torture.at (AC_ARG_VAR): Make it a single test instead of
	three as failures are unlikely, and speed matters.

2001-06-23  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Redefined M4 Macros): New.

2001-06-23  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INCLUDES_DEFAULT_REQUIREMENTS): Consider
	inttypes.h is missing if it conflicts with sys/types.h, as on IRIX
	5.3.
