@@ -65,6 +65,7 @@ James A. Lupo               lupoja@feynman.ml.wpafb.af.mil
 Jason Molenda               jsm@cygnus.com
 Jeff Garzik                 jgarzik@pobox.com
 Jeffrey A Law               law@cygnus.com
+Jens Petersen               petersen@redhat.com
 Jim Blandy                  jimb@wookumz.gnu.ai.mit.edu
 Jim Meyering                meyering@ascend.com
 Jiro Takabatake             jiro@din.or.jp
